--- a/AdminLTE-3.1.0/pages/examples/UserProfile2.html
+++ b/AdminLTE-3.1.0/pages/examples/UserProfile2.html
@@ -225,14 +225,14 @@
         }
 
         .profile-top img {
-            width: 80px;
-            height: 80px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             object-fit: cover;
         }
 
         .badge {
-            background: #d6ffe6;
+            background: #cefbdf;
             padding: 4px 12px;
             border-radius: 12px;
             color: #18a34a;
@@ -242,7 +242,7 @@
         }
 
         .name {
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 700;
             margin: 6px 0 0 0;
         }
@@ -271,17 +271,17 @@
             padding: 7px 12px;
             border-radius: 10px;
             font-size: 13px;
-            font-weight: 500;
+            font-weight: 400;
         }
 
         .edit-btn {
             background: linear-gradient(120deg, #5d6fa7, #38487c);
             border: none;
             border-radius: 20px;
-            padding: 10px 20px;
+            padding: 5px 10px;
             color: #fff;
-            font-size: 14px;
-            font-weight: 500;
+            font-size: 13px;
+            font-weight: 400;
             display: block;
             margin: 12px auto 0;
         }
