--- a/AdminLTE-3.1.0/pages/examples/Userprofile.html
+++ b/AdminLTE-3.1.0/pages/examples/Userprofile.html
@@ -286,7 +286,6 @@
     }
 
 
-
     .btn-row {
       margin-top: 14px;
       display: flex;
@@ -294,6 +293,68 @@
       background-color: #38487c;
       color: white !important;
       border-radius: 10px;
+    }
+
+    /* RESPONSIVE CARD FIX */
+    @media (max-width: 768px) {
+      .profile-card {
+        flex-direction: column;
+        text-align: center;
+        padding: 18px;
+      }
+
+      .profile-left {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 12px;
+      }
+
+      .profile-left img {
+        margin-bottom: 10px;
+      }
+
+      .btn-row {
+        width: 100%;
+        background-color: #38487c;
+        border-radius: 10px;
+      }
+
+      .profile-right {
+        width: 100%;
+        text-align: left;
+      }
+
+      .user-row {
+        flex-direction: column;
+        gap: 6px;
+        align-items: flex-start;
+      }
+
+      .location {
+        width: fit-content;
+      }
+
+      .price-row {
+        flex-direction: column;
+        gap: 6px;
+      }
+
+      .price-tag {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .user-name {
+        font-size: 18px;
+      }
+
+      .price-tag,
+      .location {
+        font-size: 11px;
+      }
     }
   </style>
 </head>
@@ -1081,8 +1142,6 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <section class="content">
-
-
         <div class="container mt-4">
           <div class="row">
             <!-- 1 -->
@@ -1152,7 +1211,7 @@
                 <div class="profile-left px-3 sm-px-0">
                   <img src="https://i.pravatar.cc/300?u=ajeet" />
                   <div class="btn-row">
-                 <button class="btn btn-sm text-light w-100">Edit</button>
+                    <button class="btn btn-sm text-light w-100">Edit</button>
                   </div>
                 </div>
 
@@ -1262,7 +1321,7 @@
                 <div class="profile-left px-3 sm-px-0">
                   <img src="https://i.pravatar.cc/300?u=akshat" />
                   <div class="btn-row">
-               <button class="btn btn-sm text-light w-100">Edit</button>
+                    <button class="btn btn-sm text-light w-100">Edit</button>
                   </div>
                 </div>
 
@@ -1290,7 +1349,7 @@
                 <div class="profile-left px-3 sm-px-0">
                   <img src="https://i.pravatar.cc/300?u=gourav" />
                   <div class="btn-row">
-                     <button class="btn btn-sm text-light w-100">Edit</button>
+                    <button class="btn btn-sm text-light w-100">Edit</button>
                   </div>
                 </div>
 
